# pointcloud_stitching

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  pcs-camera-client.cpp  pcs-camera-server.cpp  pcs-mqtt-subscriber.cpp  pcs-multicamera-client.cpp  readme.md  run_stitching.sh
calibration/: arena3.csv  camera_alignment.py  pcs4.csv
samples/: lol.bag  samples.bag  samples2.bag  samples3_60.bag  samples_same_res1.bag  samples_same_res2_60.bag  samples_same_res3_600.bag  samples_same_res4_600_drone.bag  stairs.bag
src/: CMakeLists.txt  pcs-camera-grab-frames.cpp  pcs-camera-optimized.cpp  pcs-camera-server.cpp  pcs-camera-test-samples.cpp  pcs-client.cpp  pcs-mqtt-publisher.cpp  pcs-multicamera-client.cpp  pcs-multicamera-optimized.cpp
